# Copse

./: CLAUDE.md  README.md  egui-patterns.md  todos.md
.claude/: settings.json
.claude/commands/: dev.md  groom.md  todo.md
.github/workflows/: release.yml
src/: Cargo.toml  build.rs  main.rs  updater.rs
src/git/: mod.rs
src/state/: mod.rs
src/ui/: diff.rs  graph.rs  mod.rs  pending.rs  settings.rs  sidebar.rs
src/watcher/: mod.rs
