[package]
name = "gitrove"
version = "0.1.0"
edition = "2021"
description = "Multi-repo, multi-worktree Git dashboard"
authors = []
license = "MIT"
build = "build.rs"

[[bin]]
name = "gitrove"
path = "main.rs"

[dependencies]
# Git operations
git2 = { version = "0.19", features = ["vendored-libgit2"] }

# UI framework
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
egui_extras = "0.28"

# Parallelism for multi-repo scanning
rayon = "1"

# Utilities
anyhow = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
egui-phosphor = { version = "0.6", features = ["regular"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
